# rust-depots-downloader-csgo-2016

./: Cargo.toml
src/: authentication.rs  main.rs  metadatas.rs
