[package]
name = "steam-deport-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes = "0.9.0-pre.2"
async-trait = "0.1.85"
prost = "0.13.4"
sha1 = "0.11.0-pre.4"
flate2 = "1.0.35"
chrono = "0.4.39"
